# llm-guardian

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  biome.json  bunfig.toml  config.example.yaml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
.guardian/: GUARDIAN.md  config.json  tui.jsonc
backend/: main.py
backend/alembic/: env.py
backend/api/: __init__.py  proxy.py
backend/browser_agent/: __init__.py  cua.py  guardian.py  harness.py  models.py  orchestrator.py  routing.py
backend/core/: __init__.py  analytics.py  auth.py  cache.py  guardrails.py  pricing.py  router.py  rules.py
backend/models/: __init__.py  api_key.py  base.py  request_log.py  rules.py
backend/utils/: __init__.py  db.py  settings.py
docs/: architecture.md  contributing.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: bench-context-loss-results.json  bench-context-loss.ts  bench-orchestrator-results.json  bench-orchestrator.ts  bench-quality-results.json  bench-quality.ts  bench-results-A6-AFTER.json  bench-results-BEFORE.json  bench-results-v1626-AFTER.json  bench-results.json  bench-v1626-modules.ts  smoke-memos.ts  trim-wasm.sh
src/cli/: index.ts
src/core/: types.ts  (+16 more)
(+112 files in other folders)
